<resources>
    <string name="app_name">Weather App Retrofit</string>
    <string name="title_home">Today</string>
    <string name="title_dashboard">Daily</string>
    <string name="title_notifications">Settings</string>

    <!-- Today Fragment Layout -->
    <string name="city_hint">City</string>
    <string name="search_button_text">GO</string>
    <string name="favorite_icon">Favourites</string>
    <string name="location_icon">Location</string>
    <string name="climate_image">Climate</string>

    <!--Today Fragment-->
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="feels_like">Feels Like</string>
    <string name="celsius">\u2103</string>
    <string name="fahrenheit">\u2109</string>
    <string name="today_fragment_time_format">dd MMMM, hh:mm</string>
    <string name="link_for_icon">http://openweathermap.org/img/wn/%s@4x.png</string>
    <string name="no_internet">Check Network Connection</string>
    <string name="last_updated_seconds">Last Updated %ss ago</string>
    <string name="last_updated_minutes">Last Updated %sm ago</string>
    <string name="added_to_favourites">Added to Favourites</string>
    <string name="removed_from_favourites">Removed from Favourites</string>
    <string name="city_not_found">City not Found</string>
    <string name="set_location">Set Location</string>

    <!--Settings Fragment-->
    <string name="units">Units</string>

    <string name="daily_fragment_time_format">EE, dd MMMM</string>

    <string name="no_city_entered">Please Enter a City Name</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
</resources>