<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <TextView
        android:id="@+id/forecastDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Today" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/day"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/forecastTempDay"
        app:layout_constraintEnd_toStartOf="@id/forecastTempDay"
        app:layout_constraintTop_toTopOf="@id/forecastTempDay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/night"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/forecastTempNight"
        app:layout_constraintEnd_toStartOf="@id/forecastTempNight"
        app:layout_constraintTop_toTopOf="@id/forecastTempNight" />

    <TextView
        android:id="@+id/forecastTempDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/forecastIcon"
        app:layout_constraintTop_toTopOf="@id/forecastDay"
        tools:text="25c" />

    <TextView
        android:id="@+id/forecastTempNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/forecastTempDay"
        app:layout_constraintStart_toStartOf="@id/forecastTempDay"
        app:layout_constraintTop_toBottomOf="@id/forecastTempDay"
        tools:text="25c" />

    <ImageView
        android:id="@+id/forecastIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/climate_image"
        android:src="@drawable/sun"
        app:layout_constraintBottom_toBottomOf="@id/forecastTempNight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/forecastTempDay" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E91E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forecastTempNight" />

</androidx.constraintlayout.widget.ConstraintLayout>